hydroflow/tests/snapshots/surface_difference__diff_multiset_tick_static@graphvis_dot.snap
---
source: hydroflow/tests/surface_difference.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) difference_multiset::<'tick, 'static>()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) sort()", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) for_each(|v| output_send.send(v).unwrap())", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) source_stream(pos_recv)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) source_stream(neg_recv)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) tee()", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) for_each(|x| println!(\"neg: {:?}\", x))", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n8v1
    n4v1 -> n10v1
    n5v1 -> n6v1
    n6v1 -> n9v1
    n6v1 -> n7v1
    n8v1 -> n2v1 [color=red]
    n9v1 -> n1v1 [label="neg", color=red]
    n10v1 -> n1v1 [label="pos"]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 1"
        n1v1
        subgraph "cluster_sg_1v1_var_diff" {
            label="var diff"
            n1v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 2"
        n2v1
        n3v1
        subgraph "cluster_sg_2v1_var_diff" {
            label="var diff"
            n2v1
            n3v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n5v1
        n6v1
        n7v1
        subgraph "cluster_sg_3v1_var_negs" {
            label="var negs"
            n5v1
            n6v1
        }
    }
    subgraph "cluster n4v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1\nstratum 0"
        n4v1
        subgraph "cluster_sg_4v1_var_poss" {
            label="var poss"
            n4v1
        }
    }
}

