hydroflow/tests/snapshots/surface_difference__diff_timing@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_difference.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 1"]
    1v1[\"(1v1) <tt>difference()</tt>"/]:::pullClass
    2v1[/"(2v1) <tt>for_each(|x| println!(&quot;diff: {:?}&quot;, x))</tt>"\]:::pushClass
    1v1--->2v1
    subgraph sg_1v1_var_diff ["var <tt>diff</tt>"]
        1v1
        2v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    4v1[\"(4v1) <tt>source_stream(neg_recv)</tt>"/]:::pullClass
    5v1[/"(5v1) <tt>tee()</tt>"\]:::pushClass
    6v1[/"(6v1) <tt>for_each(|x| println!(&quot;neg: {:?}&quot;, x))</tt>"\]:::pushClass
    4v1--->5v1
    5v1--->6v1
    subgraph sg_2v1_var_negs ["var <tt>negs</tt>"]
        4v1
        5v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    3v1[\"(3v1) <tt>source_stream(pos_recv)</tt>"/]:::pullClass
    subgraph sg_3v1_var_poss ["var <tt>poss</tt>"]
        3v1
    end
end
3v1--->8v1
5v1--->7v1
7v1["(7v1) <tt>handoff</tt>"]:::otherClass
7v1==neg===o1v1
8v1["(8v1) <tt>handoff</tt>"]:::otherClass
8v1--pos--->1v1

